@@ -378,6 +378,7 @@ landing-cutscene-part1=[img=utility/danger_icon] Hull compromised
 landing-cutscene-part2=[img=utility/danger_icon] Landing thrusters destroyed
 landing-cutscene-part3=[img=utility/danger_icon] Emergency thrusters damaged. Brace for impact
 on-player-died-on-entry=You died from severe impact damage upon planet entry. You'd need to be able to take more damage to survive that journey.
+landing-cutscene-abort-external-mod=You cannot land on planet Rubia without more protection. You are using a mod that normally skips space travel, but are still expected to meet the requirements to land on Rubia safely. Please see the Rubia Planet Briefing for more details.
 
 promethium_warning=⚠️ You have infinite research productivity researched, and Rubia added its science pack to its cost. This behavior can be toggled in Mod Settings if you do not want that. This warning will not appear again on this save. 
 promethium_warning-part2=⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️⬆️
